--- a/MAIN/css/style.css
+++ b/MAIN/css/style.css
@@ -11,7 +11,7 @@
 }
 
 html, body {
-    min-height: 100vh;
+    min-height: 120vh;
     background-color: var(--branquin);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
@@ -20,7 +20,7 @@ header {
     background-color: var(--cinza-escuro);
     text-align: center;
     padding: 2%;
-    box-shadow: 0px 1px 4px 3px darkgray;
+    box-shadow: 0px 1px 4px 3px #a9a9a9;
 }
 
 header > img {
@@ -28,61 +28,91 @@ header > img {
 }
 
 .container {
+    position: relative;
     min-height: 80vh;
 }
 
 .forml {
-    margin: 30px;
-    text-align: center;
-    position: relative;
+    margin: auto;
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    border: 1px solid var(--amarelo);
+    border-radius: 10px;
+    max-width: 70%;
+    height: 34px;
+    
 }
 
 .txt {
-    position: relative;
+    height: 20px;
     padding: 7px 7px 7px 20px;
-    border: 1px solid var(--amarelo);
-    border-radius: 10px;
-    width: 60%;
-    height: 25px;
     font-size: 16px;
-    color: rgba(162, 162, 162, 0.588);
+    border: 0px;
+    border-radius: 10px 0px 0px 10px;
+    width: 100%;
+    box-shadow: 1px 1px 2px 1px darkgray inset;
+
 }
 
 
-.txt:hover {
+.forml:hover {
     border: 1px solid #d4a30e;
+    border-radius: 10px;
 }
 
 .search {
-    position: absolute;
-    right: 18%;
-    padding: 5px;
-    border: 0px;
+    align-items: right;
+    border: 0px solid var(--amarelo);
     border-radius: 0px 10px 10px 0px;
     background-color: var(--amarelo);
-    min-width: 60px;
-    min-height: 40.5px;
-}
-
-.search > img {
-    width: 10px;
+    min-width: 10%;
+    min-height: 34px;
 }
 
 .search:hover {
     cursor: pointer;
     background-color: #d4a30e;
+    border: 1px solid #d4a30e;
 }
 
-.catalog {
-    position: absolute;
+.lupa {
+    width: 15px;
+}
+
+.arrow {
+    display: flex;
+    height: 5%;
+    margin: 5px 10px;
+}
+.arrow:hover {
+    margin-left: 12px;
+    cursor: pointer;
 }
 
 .personal {
     display: flex;
     border-radius: 0px 5px 5px 0px;
-    box-shadow: 0px 1px 4px 3px darkgray;
-    height: 72vh;
-    width: 10px;
-    margin-top: -60px;
+    box-shadow: 0px 1px 5px 1px darkgray;
+    height: 400px;
+    width: 6px;
+    margin-top: 10px;
 
+}
+
+.catalog {
+    display: block;
+    max-width: 640px;
+    justify-content: space-around;
+    margin: auto;
+    padding: 20px;
+}
+
+.card {
+    border: 1px solid var(--amarelo);
+    border-radius: 10px;
+    width: 100px;
+    min-height: 150px;
+    margin: 10px;
+    display: inline-block;
 }
