--- a/MAIN/css/style.css
+++ b/MAIN/css/style.css
@@ -1,7 +1,6 @@
 * {
     margin: 0px;
     padding: 0px;
-    border: 1px dashed red;
 }
 
 :root {
@@ -51,7 +50,7 @@ header > img {
     border: 0px;
     border-radius: 10px 0px 0px 10px;
     width: 100%;
-    box-shadow: 1px 1px 2px 1px darkgray inset;
+    box-shadow: 1px 1px 3px 0.5px lightgray inset;
 
 }
 
@@ -95,7 +94,7 @@ header > img {
 }
 
 .personal {
-    display: flex;
+    display: inline-flex;
     border-radius: 0px 5px 5px 0px;
     box-shadow: 0px 1px 5px 1px darkgray;
     height: 400px;
@@ -106,19 +105,26 @@ header > img {
 }
 
 .catalog {
-    position: relative;
     display: flex;
-    max-width: 640px;
-    justify-content: space-around;
-    margin: auto;
+    max-width: 63.5vw;
+    width: 750px;
+    margin: 10px auto;
     padding: 20px;
 }
 
 .card {
-    border: 1px solid var(--amarelo);
-    border-radius: 10px;
-    width: 100px;
-    min-height: 150px;
-    margin: 10px;
     display: inline-block;
+    border: 1px dashed var(--amarelo);
+    border-radius: 10px;
+    min-width: 120px;
+    max-width: 160px;
+    width: 30%;
+    min-height: 170px;
+    max-height: 1000px;
+    margin: 10px;
+}
+
+.line {
+    width: 100%;
+    justify-content: space-evenly;
 }
