--- a/MAIN/css/style.css
+++ b/MAIN/css/style.css
@@ -83,22 +83,43 @@ header > img {
     width: 15px;
 }
 
-.arrow {
-    display: flex;
-    height: 5%;
-    margin: 5px 10px;
+.arrowOpen{
+    display: block;
+    height: 20px;
+    width: 20px;
+    margin: 10px;
 }
-.arrow:hover {
+
+.arrowClose{
+    display: block;
+    height: 20px;
+    width: 20px;
+    margin: 10px;
+}
+
+.arrowOpen:hover,.arrowClose {
     margin-left: 13px;
     cursor: pointer;
 }
 
 .personal {
-    display: inline-flex;
+    display: block;
     border-radius: 0px 5px 5px 0px;
     box-shadow: 0px 1px 5px 1px darkgray;
-    height: 400px;
+    height: 500px;
     width: 6px;
+    margin-top: 10px;
+    left: 0%;
+
+}
+
+.overlay {
+    display: none;
+    border-radius: 0px 5px 5px 0px;
+    box-shadow: 0px 1px 5px 1px darkgray;
+    height: 500px;
+    min-width: 300px;
+    width: 40vw;
     margin-top: 10px;
     left: 0%;
 
