--- a/LOGIN/login.css
+++ b/LOGIN/login.css
@@ -5,8 +5,15 @@
 	box-sizing: border-box;
 }
 
+:root {
+    --pretin: #121517;
+    --branquin: #F7F9F9;
+    --cinza-escuro: #4C5154;
+    --amarelo: #FFC000;
+}
+
 body {
-	background: #F3EDE0;
+	background: var(--branquin);
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -47,9 +54,9 @@ a {
 
 button {
 	border-radius: 20px;
-	border: 1px solid #A43039;
-	background-color: #A43039;
-	color: #F3EDE0;
+	border: 1px solid var(--amarelo);
+	background-color: var(--amarelo);
+	color: var(--branquin);
 	font-size: 12px;
 	font-weight: bold;
 	padding: 12px 45px;
@@ -68,11 +75,11 @@ button:focus {
 
 button.ghost {
 	background-color: transparent;
-	border-color: #F3EDE0;
+	border-color: var(--branquin);
 }
 
 form {
-	background-color: #FFFFFF;
+	background-color: var(--branquin);
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -83,7 +90,7 @@ form {
 }
 
 input {
-	background-color: #F3EDE0;
+	background-color: var(--branquin);
 	border: none;
 	padding: 12px 15px;
 	margin: 8px 0;
@@ -91,14 +98,14 @@ input {
 }
 
 .container {
-	background-color: #F3EDE0;
+	background-color: var(--branquin);
 	border-radius: 10px;
   	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
 			0 10px 10px rgba(0,0,0,0.22);
 	position: relative;
 	overflow: hidden;
-	width: 768px;
-	max-width: 100%;
+	width: 90vw;
+	max-width: 748px;
 	min-height: 480px;
 }
 
@@ -161,13 +168,12 @@ input {
 }
 
 .overlay {
-	background: #FF416C;
-	background: -webkit-linear-gradient(to right, #A43039, #ae464f);
-	background: linear-gradient(to right, #A43039, #ae464f);
+	background: -webkit-linear-gradient(to right, var(--cinza-escuro), var(--cinza-escuro));
+	background: linear-gradient(to right, var(--cinza-escuro), var(--cinza-escuro));
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 0;
-	color: #F3EDE0;
+	color: var(--branquin);
 	position: relative;
 	left: -100%;
 	height: 100%;
@@ -217,7 +223,7 @@ input {
 }
 
 .social-container a {
-	border: 1px solid #F3EDE0;
+	border: 1px solid var(--branquin);
 	border-radius: 50%;
 	display: inline-flex;
 	justify-content: center;
@@ -233,8 +239,8 @@ input {
 }
 
 footer {
-    background-color: #222;
-    color: #F3EDE0;
+    background-color: var(--pretin);
+    color: var(--branquin);
     font-size: 14px;
     bottom: 0;
     position: fixed;
@@ -249,7 +255,7 @@ footer p {
 }
 
 footer i {
-    color: red;
+    color: var(--branquin);
 }
 
 footer a {
