--- a/MAIN/css/style.css
+++ b/MAIN/css/style.css
@@ -213,7 +213,7 @@ header > img {
     text-align: center;
     border-radius: 5px;
     box-shadow: 0px 1px 10px 1px lightgray;
-    padding: 10px;
+    padding: 25px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -222,10 +222,89 @@ header > img {
 
 .info > h2 {
     color: var(--amarelo);
-    margin: 10px;
+    margin: 0px 10px 20px 10px;
     font-family: Arial, Helvetica, sans-serif;
-
 }
+
+.containerProfile {
+    margin: 50px auto;
+    min-width: 400px;
+    width: 70vw;
+}
+.cabeca {
+    margin: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.cabeca > img {
+    width: 10vw;
+    max-height: 110px;
+    max-width: 110px;
+}
+.cabeca > h1 {
+    font-size: 6vw;
+}
+
+.cabeca > a > .conf2 {
+    height: 2.5vw;
+    width: 2.5vw;
+    min-width: 20px;
+    min-height: 20px;
+}
+
+.fav, .hist {
+    margin: 15px;
+    min-height: 12vh;
+    overflow-x: auto;
+    border: 1px solid var(--amarelo);
+    padding: 2%;
+    border-radius: 5px;
+    color: var(--amarelo);
+}
+
+.fav, .hist > h3 {
+    font-size: 2vw;
+    font-weight: bolder;
+}
+
+.card2:hover + .close {
+    display: block;
+    cursor: pointer;
+}
+
+.card2:hover {
+    background-color: rgb(237, 237, 237);
+    cursor: pointer;
+}
+
+.close {
+    display: none;
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    top: 50%;
+    left: 50%;
+}
+
+.card2 {
+    display: inline-flex;
+    border: 1px dashed var(--amarelo);
+    border-radius: 10px;
+    min-width: 60px;
+    max-width: 160px;
+    width: 25%;
+    min-height: 100px;
+    max-height: 200px;
+    height: 20vw;
+    margin: 10px;
+}
+
+
+.listas {
+    min-height: 20vh;
+}
+
 
 footer {
     color: var(--branquin);
