--- a/CRUD/css/style.css
+++ b/CRUD/css/style.css
@@ -112,6 +112,19 @@ a:hover {
     background-color: #F7F9F9;
 }
 
+.containerCU {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    height: min-content;
+    width: 30%;
+    min-width: 400px;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 1px 1px 10px 1px lightgray;
+    margin: auto;
+    margin-top: 30px;
+    background-color: #F7F9F9;
+}
+
 .TEMPORARY {
     width: fit-content;
     margin: 0px;
@@ -230,7 +243,7 @@ a:hover {
 }
 
 .card:hover {
-    /* background-color: lightgray; */
+    background-color: lightgray;
     cursor: pointer;
 }
 
@@ -363,7 +376,7 @@ td {
 footer {
     color: var(--branquin);
     bottom: 0;
-    width: 100vw;
+    width: 100%;
 }
 
 footer > h5 {
