--- a/CRUD/css/style.css
+++ b/CRUD/css/style.css
@@ -348,7 +348,8 @@ a:hover {
     max-width: 600px;
     box-shadow: 0px 0px 10px 1px lightgray;
     padding: 10px;
-    margin: 20px auto;
+    margin: auto;
+    margin-top: 40px;
     border-radius: 10px;
     background-color: #F7F9F9;
 }
@@ -356,7 +357,7 @@ a:hover {
 .arrumamento {
     box-shadow: 0px 0px 10px 0px lightgray;
     width: fit-content;
-    margin: 240px auto;
+    margin: 140px auto;
     padding: 20px;
     border-radius: 10px;
     background-color: #F7F9F9;
