--- a/CRUD/css/style.css
+++ b/CRUD/css/style.css
@@ -14,6 +14,7 @@ html, body {
     min-height: 90vh;
     background-color: var(--branquin);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    width: 100%;
 }
 
 
